--- a/index.css
+++ b/index.css
@@ -19,12 +19,17 @@
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
+    color: var(--Very-Dark-Blue);
 }
 
-
+.header {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 3em;
+    color: var(--Very-Dark-Blue);
+}
 
 header {
-    font-family:'Raleway', sans-serif;
     padding: 70px 70px 0px 70px;
 }
 
@@ -34,37 +39,45 @@ header {
     list-style: none;
     float: right;
 }
+
 .Navbar li {
     display: inline;
     margin-right: 50px;
     color: var(--Desaturated-Blue);
 }
 
-.row-1{
+.row-1 {
     margin-top: 100px;
     display: flex;
     padding: 0px 70px 0px 70px;
 }
+
 /* 650X475 */
 
-.row-1-text{
+.row-1-text {
     align-self: center;
 }
 
-.bg-curve{
+.bg-curve {
     width: 100%;
     height: 100%;
     padding-top: 180px;
+    
+    margin-bottom: -5px;
 }
-.row-2{
+
+.row-2 {
+    display: flex;
     background-color: var(--Light-Grayish-Blue);
     height: 780px;
     padding: 35px 70px 0px 70px;
 }
-.row-1 img, .row-2-image img{
+
+.row-1 img, .row-2-image img {
     width: 650px;
     height: 475px;
 }
+
 .attribution {
     font-size: 11px;
     text-align: center;
